force-app/main/default/objects/Deal__c/Deal__c.object-meta.xml
<CustomObject>
    <label>Deal</label>
    <nameField>
        <displayFormat>DL-{0000}</displayFormat>
        <label>Deal ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>