force-app/main/default/objects/Deal__c/fields/Actual_Price__c.field-meta.xml
<CustomField>
    <fullName>Actual_Price__c</fullName>
    <label>Actual Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>