force-app/main/default/objects/Deal__c/validationRules/DIscount_Amount_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>DIscount_Amount_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Discount_Amount__c  &gt;=  Actual_Price__c</errorConditionFormula>
    <errorMessage>Discount should be less than Actual Price.</errorMessage>
</ValidationRule>