force-app/main/default/objects/Deal__c/validationRules/Purchase_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Purchase_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>TODAY() -  Purchase_Date__c  &lt; 0</errorConditionFormula>
    <errorMessage>Purchase date cannot be in future.</errorMessage>
</ValidationRule>